Fixed gap above footer

--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ height: 400px;
 }
 
 footer {
-    background-color: #333B50;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    background-color: #2b3346;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0%;
 }
 
 h1 {
@@ -156,8 +157,10 @@ button {
 .workIt {
     background-image: url("images/WireframesBackground.png");
     background-position:center;
+    background-repeat: no-repeat;
     background-size:cover;
     background-color: #0D1526;
+    padding-bottom: 1%;
 }
 
 @media screen and (max-width: 600px) {
